--- a/pages/index.css
+++ b/pages/index.css
@@ -1,134 +1,6 @@
 @import url(../vendor/fonts.css);
 @import url(../vendor/normalize.css);
-
-body{
- background-color: #2a2c2f;
-}
-
-.page{
- max-width: 1280px;
- background-color: #2a2c2f;
- margin: 0 auto;
- }
-
- .header{
-    display: flex;
-    justify-content: center;
-    margin: auto;
- }
-
- .header__logo{
-  max-width: 254px;
-  max-height: 70px;
-  margin: 34px auto 0; 
- }
-
- .post__title{
-   max-width: 720px;
-   margin: 90px auto 32px;
-   font-family: "Inter", Arial, Helvetica, sans-serif;
-   font-weight: 900;
-   font-size: 96px;
-   line-height: 100px;
-   letter-spacing: 0%;
-   text-align: center;
-   color: #fff;
- }
-
- .post__subtitle{
-    max-width: 720px;
-    margin: 0 auto 64px;
-    font-family: "Inter", Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
-    letter-spacing: 0%;
-    text-align: center;
-    color:#fff;
- }
-
- .post__image{
-    max-width: 984px;
-    width: 100%;
-    height: 615px;
-    object-fit: cover;
-    display: block;
-    margin: 0 auto 92px;
- }
-
- .post__content{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    max-width: 830px;
-    margin-left: 148px;
-    padding: 0;
- }
-
- .post__content_heading{
-    white-space: nowrap;
-    padding: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-    max-width: 830px;
-    font-family: "Inter", Arial, Helvetica, sans-serif;
-    font-weight: 900;
-    font-size: 54px;
-    line-height: 58px;
-    letter-spacing: 0%;
-    color:#fff
- }
-
- .post__content_subheading{
-    max-width: 738px;
-    margin: 40px 0 0;
-    font-family: "Inter", Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 34px;
-    letter-spacing: 0%;
-    color: #fff;
- }
-
- .post__content_author{
-    max-width: 732px;
-    margin-top: 10px;
-    margin-bottom: 0;
-    font-family: "Inter", Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 34px;
-    letter-spacing: 0%;
-    text-align: right;
-    color: #fff;
-
- }
-
- .post__content_text{
-    max-width: 722px;
-    margin-top: 32px;
-    margin-bottom: 92px;;
-    font-family: "Inter", Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 163%;
-    letter-spacing: 0%;
-    color: #fff;
-    }
-
-    .footer{
-      max-width: 166px;
-      margin: 0 auto 24px;
-    }
-
-    .footer__copyright{
-       padding: 0;
-       margin: 0;
-       font-family: "Inter", Arial, Helvetica, sans-serif;
-       font-weight: 400;
-       font-size: 14px;
-       line-height: 16px;
-       letter-spacing: 0%;
-       text-align: right;
-       color: #fff; 
-    }
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/post.css);
+@import url(../blocks/footer.css);
