--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -10,7 +10,7 @@
        font-weight: 400;
        font-size: 14px;
        line-height: 16px;
-       text-align: right;
+       text-align: center;
        color: #fff; 
     }
 
