Adiciona photogrid.css

--- a/blocks/post.css
+++ b/blocks/post.css
@@ -73,7 +73,7 @@
 
  .post__content_text{
     max-width: 722px;
-    margin: 32px 0 92px;
+    margin: 32px 0 0;
     font-family: "Inter", Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 16px;
