--- a/pages/index.css
+++ b/pages/index.css
@@ -3,5 +3,6 @@
 @import url(../blocks/page.css);
 @import url(../blocks/header.css);
 @import url(../blocks/post.css);
+@import url(../blocks/photogrid.css);
 @import url(../blocks/footer.css);
 
