--- a/pages/index.css
+++ b/pages/index.css
@@ -4,5 +4,6 @@
 @import url(../blocks/header.css);
 @import url(../blocks/post.css);
 @import url(../blocks/photogrid.css);
+@import url(../blocks/places.css);
 @import url(../blocks/footer.css);
 
