--- a/blocks/photogrid.css
+++ b/blocks/photogrid.css
@@ -3,11 +3,48 @@
     margin: 118px auto 92px;
     gap: 16px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(284px, 1fr));
+    grid-template-columns: repeat(3, 1fr);
 }
 
 .photo-grid__item{
     width: 100%;
-    height: 213px;
-    }
+}
     
+ @media screen and (max-width: 1024px){
+    .photo-grid{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    max-width: 352px;
+    margin-bottom: 88px;
+    }
+ }
+
+  @media screen and (max-width: 768px){
+    .photo-grid{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 16px;
+    max-width: 352px;
+    }
+  }
+
+  @media screen and (max-width: 544px){
+    .photo-grid{
+    grid-template-columns: 1, 1fr;
+    max-width: 288px;
+    }
+    .photo-grid__item{
+    width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 320px){
+    .photo-grid{
+    grid-template-columns: 1, 1fr;
+    grid-auto-rows: 288px;
+    row-gap: 12px;
+    max-width: 288px;
+    }
+    .photo-grid__item{
+    width: 100%;
+    }
+  }
