--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,50 +1,224 @@
 .places{
-    max-width: 984px;
     margin: 0 auto 90px;
     color: #fff;
     margin-left: 148px;
     }
 
-.places__header{
-    display: flex;
-    flex-direction: row;
+.places__content{
+    max-width: 984px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, auto);
+    column-gap: 40px;
     margin: 0;
 }
-
-.places__header_title{
+.places__content_title{
+    grid-column-start: 1;
     max-width: 460px;
-    font-family: Inter;
+    height: 228px;
+    font-family: "Inter", Arial, sans-serif;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    margin-bottom: 48px;
+    margin-top: 48px;
     padding: 0;
+    display: flex;
+    text-overflow: ellipsis;
 }
 
-.places__header_artists{
+.places__content_artists{
+    grid-column-start: 2;
+    max-width: 456px;
+    height: 228px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    max-width: 456px;
-    margin-bottom: 48px;
-    padding: 0;
+    margin: 0;
 }
 
-.places__header_artists-heading{
-    font-family: Inter;
+.places__content_artists-heading{
+    font-family: "Inter", Arial, sans-serif;
     font-weight: 400;
     font-size: 12px;
     line-height: 100%;
     letter-spacing: 12%;
     text-transform: uppercase;
+    margin: 0 0 8px;
 }
 
-.places__header_artists-author{
+.places__content_artists-author{
+    margin: 0;
+    font-family: "Inter", Arial, sans-serif;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 22px;
+}
+
+.places__content_image{
+    max-width: 460px;
+    height: 460px;
+    grid-column-start: 1;
+    grid-row-start: 2;
+    grid-row-end: span 3;
+    box-shadow: 10px, 10px, 25px, rgba(0, 0, 0, 0.5);
+}
+
+.places__content_texts{
+    margin: 0;
+    max-width:484px;  
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
     font-family: Inter;
     font-weight: 400;
     font-size: 18px;
-    leading-trim: NONE;
-    line-height: 22px;
-
-
+    line-height: 163%;
+    letter-spacing: 0%;
 }
+
+.places__content_button{
+    max-width: 355px;
+    height: 48px;
+    grid-column-start: 1;
+    grid-row-start: 3;
+    background-color: linear-gradient(to left, #0278fe #003a7b);
+    align-self: flex-end;
+    align-content: center;
+    text-align: center;
+    margin-top: 48px;
+    border: #0278FE 1px solid;
+    font-family: "Inter", arial, sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 100%;
+    color: #fff;
+    text-decoration: none;
+    box-shadow: 10px, 10px, 25px, rgba(0, 0, 0, 0.5);
+}
+
+ @media screen and (max-width: 1024px){
+        .places{
+            max-width: 890px;
+            margin: 0 auto 72px;
+        }
+        .places__content{
+            width: 100%;
+            column-gap: 28px;
+        }
+        .places__content_title{
+            max-width: 340px;
+            font-size: 52px;
+            line-height: 46px;
+        }
+        .places__content_image{
+            max-width: 400px;
+            height: 400px;
+        }
+}
+
+    @media screen and (max-width: 768px){
+        .places{
+            max-width: 720px;
+            margin: 0 auto 72px;
+        }
+        .places__content{
+            width: 100%;
+            column-gap: 28px;
+        }
+        .places__content_title{
+            max-width: 340px;
+            font-size: 42px;
+            line-height: 46px;
+        }
+        .places__content_image{
+            max-width: 340px;
+            height: 340px;
+        }
+        .places__content_texts{
+            font-size: 16px;
+        }
+    }
+
+    @media screen and (max-width: 544px){
+        .places{
+            max-width: 520px;
+            margin: 0 auto 72px;
+        }
+        .places__content{
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(5, 1fr);
+            width: 100%;
+            row-gap: 30px;
+        }
+        .places__content_title{
+            grid-row-start: 1;
+            max-width: 340px;
+            font-size: 36px;
+            line-height: 38px;
+        }
+
+        .places__content_artists{
+            grid-row-start: 2;
+        }
+
+        .places__content_image{
+            grid-row-start: 3;
+            max-width: 340px;
+            height: 340px;
+        }
+        .places__content_texts{
+            grid-row-start: 4;
+            font-size: 16px;
+        }
+
+        .places__content_button{
+            grid-row-start: 5;
+            max-width: 288px;
+            height: 48px;
+            margin-top: 45px;
+        }
+    }
+
+    @media screen and (max-width: 320px){
+        .places{
+            max-width: 320px;
+            margin: 0 auto 72px;
+        }
+        .places__content{
+            grid-template-columns: repeat(1, 1fr);
+            grid-template-rows: repeat(5, 1fr);
+            grid-column-start: 1;
+            row-gap: 30px;
+        }
+        .places__content_title{
+            grid-row-start: 1;
+            max-width: 288px;
+            font-size: 32px;
+            line-height: 35px;
+        }
+
+        .places__content_artists{
+            grid-row-start: 2;
+        }
+
+        .places__content_image{
+            grid-row-start: 3;
+            max-width: 320px;
+            height: 320px;
+        }
+        .places__content_texts{
+            grid-row-start: 4;
+            max-width: 288px;
+            font-size: 16px;
+        }
+
+        .places__content_button{
+            grid-row-start: 5;
+            max-width: 288px;
+            height: 48px;
+            margin-top: 45px;
+        }
+    }
+
+
+
