--- a/blocks/places.css
+++ b/blocks/places.css
@@ -1,42 +1,45 @@
 .places{
-    margin: 0 auto 90px;
+    margin: 92 auto 90px;
     color: #fff;
     margin-left: 148px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 80px;
     }
 
-.places__content{
+.place{
     max-width: 984px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, auto);
+    grid-template-areas: 
+        "title artists"
+        "image texts"
+        "button texts";
     column-gap: 40px;
+    row-gap: 48px;
     margin: 0;
 }
-.places__content_title{
-    grid-column-start: 1;
+.place__title{
+    grid-area: title;
     max-width: 460px;
     height: 228px;
     font-family: "Inter", Arial, sans-serif;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
-    margin-top: 48px;
     padding: 0;
-    display: flex;
+    margin-top: auto;
+    margin-bottom: 0;
     text-overflow: ellipsis;
 }
 
-.places__content_artists{
-    grid-column-start: 2;
+.place__artists{
+    grid-area: artists;
     max-width: 456px;
-    height: 228px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    margin: 0;
+    margin-top: auto;
 }
 
-.places__content_artists-heading{
+.place__artists-heading{
     font-family: "Inter", Arial, sans-serif;
     font-weight: 400;
     font-size: 12px;
@@ -46,7 +49,7 @@
     margin: 0 0 8px;
 }
 
-.places__content_artists-author{
+.place__artists-author{
     margin: 0;
     font-family: "Inter", Arial, sans-serif;
     font-weight: 400;
@@ -54,47 +57,27 @@
     line-height: 22px;
 }
 
-.places__content_image{
-    max-width: 460px;
+.place__image{
+    width: 100%;
     height: 460px;
-    grid-column-start: 1;
-    grid-row-start: 2;
-    grid-row-end: span 3;
+    grid-area: image;
+    object-fit: cover;
+    border: 1px;
     box-shadow: 10px, 10px, 25px, rgba(0, 0, 0, 0.5);
 }
 
-.places__content_texts{
-    margin: 0;
-    max-width:484px;  
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    font-family: Inter;
+.place__texts{
+    grid-area: texts;
+    width: 100%;  
+    row-gap: 25px;
+    font-family: "Inter";
     font-weight: 400;
     font-size: 18px;
     line-height: 163%;
     letter-spacing: 0%;
 }
 
-.places__content_button{
-    max-width: 355px;
-    height: 48px;
-    grid-column-start: 1;
-    grid-row-start: 3;
-    background-color: linear-gradient(to left, #0278fe #003a7b);
-    align-self: flex-end;
-    align-content: center;
-    text-align: center;
-    margin-top: 48px;
-    border: #0278FE 1px solid;
-    font-family: "Inter", arial, sans-serif;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 100%;
-    color: #fff;
-    text-decoration: none;
-    box-shadow: 10px, 10px, 25px, rgba(0, 0, 0, 0.5);
-}
+
 
  @media screen and (max-width: 1024px){
         .places{
