--- a/pages/index.css
+++ b/pages/index.css
@@ -5,5 +5,6 @@
 @import url(../blocks/post.css);
 @import url(../blocks/photogrid.css);
 @import url(../blocks/places.css);
+@import url(../blocks/button.css);
 @import url(../blocks/footer.css);
 
