--- a/blocks/button.css
+++ b/blocks/button.css
@@ -1,21 +1,30 @@
 .button{
+    display: grid;
     grid-area: button;
-    width: 100%;
+    text-decoration: none;
+    width: 355px;
     height: 48px;
     border: #0278FE 1px solid;
+    background: linear-gradient(90deg, #0278FE 0%, #003A7B 100%);
     font-family: "Inter", arial, sans-serif;
     font-weight: 600;
     font-size: 18px;
     line-height: 100%;
     color: #fff;
-    text-decoration: none;
+    text-align: center;
+    align-content: center;
+    box-shadow: 5px 5px 10px 0px #00000040;
+}
+
+.button:hover{
+    background: linear-gradient(90deg, rgba(2, 120, 254, 0.25) 0%, rgba(0, 58, 123, 0.25) 99.98%);
+
 }
 
     @media screen and (max-width: 544px){
         .button{
             max-width: 288px;
             height: 48px;
-            margin-top: 45px;
         }
     }
 
@@ -23,6 +32,8 @@
         .button{
             max-width: 288px;
             height: 48px;
-            margin-top: 45px;
+            font-size: 14px;
+            margin: auto;
+            align-self: center;
         }
     }
